fixed index spacing and images

--- a/_sass/_includes/_component__header.scss
+++ b/_sass/_includes/_component__header.scss
@@ -7,7 +7,7 @@
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - Header
 
 .header--main {
-  // padding: 40px 0;
+  padding: 40px 0;
 
   // position: fixed;
   // top: 0;
