--- a/_sass/_includes/_section__listing.scss
+++ b/_sass/_includes/_section__listing.scss
@@ -33,6 +33,7 @@
   .project__images {
     position: relative;
     margin-bottom: 50px;
+    width: 100%;
 
     .owl-stage-outer {
       overflow: visible;
